# aviation-safety-scrapers

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md
.github/: dependabot.yml
.superpowers/sdd/: iac-html-report.md  security-download-report.md
control-plane/: .gitignore  README.md  go.mod  go.sum
control-plane/scripts/: fetch-icao.sh  repair-country-attribution.sql  repair-tier-taxonomy.sql
sources-go/aircrash/: .gitignore  Dockerfile  README.md  db.go  db_test.go  go.mod  (+9 more)
sources/cenipa/: SMOKE.md  pyproject.toml
sources/cenipa/cenipa_ingest/: cenipa.py  cli.py  db.py  pdf.py  pipeline.py  text.py
sources/cenipa/deploy/: cenipa-cycle.service  cenipa-cycle.timer  run-cycle.sh
sources/cenipa/tests/: test_ansv.py  test_ansv_scraper.py  test_cenipa.py  test_db.py  test_pdf.py  test_pipeline.py  test_text.py
sources/cenipa/tests/fixtures/: cenipa_listing.html
sources/gpiaaf/: .gitignore  SMOKE.md  pyproject.toml
sources/gpiaaf/deploy/: gpiaaf-cycle.service  gpiaaf-cycle.timer  run-cycle.sh
sources/gpiaaf/gpiaaf_ingest/: cli.py  db.py  gpiaaf.py  pdf.py  pipeline.py  text.py
sources/gpiaaf/tests/: conftest.py  test_cli.py  test_db.py  test_gpiaaf.py  test_pipeline.py
sources/otkes/: SMOKE.md  pyproject.toml
sources/otkes/deploy/: otkes-cycle.service  otkes-cycle.timer  run-cycle.sh
sources/otkes/otkes_ingest/: cli.py  db.py  otkes.py  pdf.py  pipeline.py  text.py
sources/otkes/tests/: conftest.py  test_cli.py  test_db.py  test_otkes.py  test_pipeline.py
sources/otkes/tests/fixtures/: detail_full.txt  detail_legacy.txt  detail_selvitys.txt
(+936 files in other folders)
