[project]
name = "cenipa-ingest"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["httpx>=0.28.1", "patchright>=1.60.1"]

[project.optional-dependencies]
dev = ["pytest>=9.0.3"]

[tool.setuptools.packages.find]
include = ["cenipa_ingest*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
