[project]
name = "gpiaaf-ingest"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["httpx>=0.28.1", "certifi", "playwright>=1.60.0"]

[project.optional-dependencies]
dev = ["pytest>=9.1.1"]

[tool.setuptools.packages.find]
include = ["gpiaaf_ingest*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
