[project]
name = "otkes-ingest"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27", "certifi", "playwright>=1.40"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["otkes_ingest*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
